[package]
name = "down"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"], default-features = false }
anyhow = "1.0.44"
tempdir = "0.3.7"
tar = "0.4.37"
flate2 = "1.0.22"
indicatif = "0.16.2"
tokio = { version = "1", features = ["full"] }